--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Page</title>
+    <title>Melody Sepahpour-Fard</title>
 </head>
 <body>
-    <h1>Welcome to My GitHub Page!</h1>
-    <p>This is my first website hosted on GitHub Pages.</p>
+    <h1>Melody Sepahpour-Fard</h1>
+    <img src="profile.jpg" alt="Profile Photo" width="200">
+    
+    <p>PhD Researcher in Data Science at the University of Limerick</p>
+    <p>Interested in social identity formation, social media analysis, and natural language processing.</p>
+
+    <h2>Publications</h2>
+    <p><a href="publications.html">View my publications</a></p>
+
+    <h2>Contact</h2>
+    <p>Email: melody.sepahpourfard@ul.ie</p>
+    <p><a href="https://www.linkedin.com/in/melody-sepahpour-fard-761546140">LinkedIn</a></p>
 </body>
 </html>
