--- a/index.html
+++ b/index.html
@@ -4,19 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Melody Sepahpour-Fard</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Melody Sepahpour-Fard</h1>
-    <img src="profile.jpg" alt="Profile Photo" width="200">
-    
-    <p>PhD Researcher in Data Science at the University of Limerick</p>
-    <p>Interested in social identity formation, social media analysis, and natural language processing.</p>
+    <div class="container">
+        <header>
+            <img src="profile.jpg" alt="Melody Sepahpour-Fard" class="profile-pic">
+            <h1>Melody Sepahpour-Fard</h1>
+            <p class="subtitle">PhD Researcher in Data Science</p>
+        </header>
 
-    <h2>Publications</h2>
-    <p><a href="publications.html">View my publications</a></p>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="publications.html">Publications</a>
+            <a href="contact.html">Contact</a>
+        </nav>
 
-    <h2>Contact</h2>
-    <p>Email: melody.sepahpourfard@ul.ie</p>
-    <p><a href="https://www.linkedin.com/in/melody-sepahpour-fard-761546140">LinkedIn</a></p>
+        <section class="content">
+            <p>Welcome to my personal website. I am a PhD researcher in Data Science at the University of Limerick, working on social identity formation in the digital age.</p>
+            <p>My research interests include natural language processing, social media analysis, and social identity in online movements.</p>
+            <p><a href="publications.html" class="button">View My Publications</a></p>
+        </section>
+
+        <footer>
+            <p>Contact: melody.sepahpourfard@ul.ie | <a href="https://www.linkedin.com/in/melody-sepahpour-fard-761546140">LinkedIn</a></p>
+        </footer>
+    </div>
 </body>
 </html>
