adding photo and improving design

--- a/index.html
+++ b/index.html
@@ -3,31 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Melody Sepahpour-Fard</title>
+    <meta name="description" content="Personal website of Melody Sepahpour-Fard, PhD Researcher in Data Science">
+    <title>Melody Sepahpour-Fard | PhD Researcher in Data Science</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <img src="profile.jpg" alt="Melody Sepahpour-Fard" class="profile-pic">
+            <img src="melody_sepahpourfard.jpg" alt="Portrait of Melody Sepahpour-Fard" class="profile-pic" loading="lazy">
             <h1>Melody Sepahpour-Fard</h1>
             <p class="subtitle">PhD Researcher in Data Science</p>
         </header>
 
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="publications.html">Publications</a>
-            <a href="contact.html">Contact</a>
+        <nav aria-label="Main navigation">
+            <ul>
+                <li><a href="index.html" aria-current="page">Home</a></li>
+                <li><a href="publications.html">Publications</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
         </nav>
 
-        <section class="content">
-            <p>Welcome to my personal website. I am a PhD researcher in Data Science at the University of Limerick, working on social identity formation in the digital age.</p>
-            <p>My research interests include natural language processing, social media analysis, and social identity in online movements.</p>
-            <p><a href="publications.html" class="button">View My Publications</a></p>
-        </section>
+        <main>
+            <section class="content">
+                <h2>About Me</h2>
+                <p>Welcome to my personal website. I am a PhD researcher in Data Science at the University of Limerick, working on social identity formation in the digital age.</p>
+                <p>My research interests include natural language processing, social media analysis, and social identity in online movements.</p>
+                <p><a href="publications.html" class="button">View My Publications</a></p>
+            </section>
+        </main>
 
         <footer>
-            <p>Contact: melody.sepahpourfard@ul.ie | <a href="https://www.linkedin.com/in/melody-sepahpour-fard-761546140">LinkedIn</a></p>
+            <p>Contact: <a href="mailto:melody.sepahpourfard@ul.ie">melody.sepahpourfard@ul.ie</a> | <a href="https://www.linkedin.com/in/melody-sepahpour-fard-761546140" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
         </footer>
     </div>
 </body>
