--- a/publications.html
+++ b/publications.html
@@ -3,17 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Publications by Melody Sepahpour-Fard">
     <title>Publications - Melody Sepahpour-Fard</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>My Publications</h1>
-    <ul>
-        <li><a href="https://arxiv.org/pdf/2410.12676">Identity Emergence in the Context of Vaccine Criticism in France</a> (Submitted to Nature Human Behaviour, 2024)</li>
-        <li><a href="https://doi.org/10.1140/epjds/s13688-023-00412-7">Using word embeddings to analyse audience effects in parenting Subreddits</a> (EPJ Data Science, 2023)</li>
-        <li><a href="https://doi.org/10.1140/epjds/s13688-023-00417-2">Mental health concerns precede quits: shifts in work discourse during Covid-19</a> (EPJ Data Science, 2023)</li>
-        <li><a href="https://doi.org/10.1145/3485447.3512138">How Do Mothers and Fathers Talk About Parenting? Topic Modelling Analysis</a> (ACM Web Conference, 2022)</li>
-    </ul>
+    <div class="container">
+        <header>
+            <h1>Melody Sepahpour-Fard</h1>
+            <p class="subtitle">PhD Researcher in Data Science</p>
+        </header>
 
-    <p><a href="index.html">Back to homepage</a></p>
+        <nav aria-label="Main navigation">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="publications.html" aria-current="page">Publications</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+
+        <main>
+            <section class="content">
+                <h2>My Publications</h2>
+                <ul class="publications-list">
+                    <li><a href="https://arxiv.org/pdf/2410.12676" target="_blank" rel="noopener noreferrer">Identity Emergence in the Context of Vaccine Criticism in France</a> (Submitted to Nature Human Behaviour, 2024)</li>
+                    <li><a href="https://doi.org/10.1140/epjds/s13688-023-00412-7" target="_blank" rel="noopener noreferrer">Using word embeddings to analyse audience effects in parenting Subreddits</a> (EPJ Data Science, 2023)</li>
+                    <li><a href="https://doi.org/10.1140/epjds/s13688-023-00417-2" target="_blank" rel="noopener noreferrer">Mental health concerns precede quits: shifts in work discourse during Covid-19</a> (EPJ Data Science, 2023)</li>
+                    <li><a href="https://doi.org/10.1145/3485447.3512138" target="_blank" rel="noopener noreferrer">How Do Mothers and Fathers Talk About Parenting? Topic Modelling Analysis</a> (ACM Web Conference, 2022)</li>
+                </ul>
+            </section>
+        </main>
+
+        <footer>
+            <p>Contact: <a href="mailto:melody.sepahpourfard@ul.ie">melody.sepahpourfard@ul.ie</a> | <a href="https://www.linkedin.com/in/melody-sepahpour-fard-761546140" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
+        </footer>
+    </div>
 </body>
 </html>
